# voiceForge

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG_SPECTRUM.md  DIAGNOSTIC_TEST_RESULTS.md  ISSUE_IDENTIFIED.md  REVIEW_COMPLETE.md  SPECTRUM_DEBUG_REPORT.md  TESTING_COMPLETE.md  generate_test_assets.py  test_spectrum_debug.sh
audits/: P5_GPU_SPECTRUM_AUDIT.md  audit-P0-P2.md  audit-P0-P4-quality.md  audit-P4-bugs-fixed.md  audit-P5-P8-revised-plans.md  audit-inconsistencies-P0-P3.md  audit-post-scrollable-picker-quality.md
docs/: EFFECTS_PIPELINE.md  FILE_LOADING.md
implementations/: P0-scaffold-and-world-ffi.md  P1-audio-decoder-and-playback.md  P1b-wsl2-audio-mend.md  P2-tui-skeleton-implementation.md  P3-world-integration-and-resynthesis.md  P3b-audit-P0-P2-integrated-corrected.md  P4-ab-comparison-toggle.md  P5-spectrum-display.md  P6-effects-chain.md  P6b-live-gain.md  P7-wav-export.md  P8-polish.md  Q01-gpu-spectrum-implementation.md  Q02-full-code-audit-fixes.md  Q02-spectrum-frequency-labels.md  Q03-interactive-file-picker-implementation.md  Q04-graphic-eq-implementation.md  Q05-non-blocking-file-opener.md  Q05-smooth-slider-rendering.md  R01-P8-full-code-audit-fixes.md
plans/: API-command-interface.md  P0-scaffold-and-world-ffi.md  P1-audio-decoder-and-playback.md  P1b-wsl2-audio-mend.md  P2-tui-skeleton.md  P3-world-integration-and-sliders.md  P4-ab-comparison-v2.md  P4-ab-comparison.md  P4b-enhanced-seek-navigation.md  P5-spectrum-display.md  P6-effects-chain-v2.md  P7-export-wav-v2.md  P8-polish.md  Q01-gpu-spectrum.md  Q02-spectrum-scale.md  initial_plan.md  (+4 more)
(+37 files in other folders)
