[workspace]
members = [".", "crates/world-sys"]

[package]
name = "voiceforge"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
world-sys = { path = "crates/world-sys" }
cpal = "0.17"
crossbeam-channel = "0.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm", "flac"] }
ratatui = "0.30"
rustfft = "6.4"
hound = "3.5"
ratatui-image = { version = "0.10", default-features = false, features = ["crossterm", "image-defaults", "rustix"] }
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
hound = "3.5"
