[workspace]
members = [".", "crates/world-sys"]

[package]
name = "voiceforge"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
world-sys = { path = "crates/world-sys" }
cpal = "0.17"
crossbeam-channel = "0.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm", "flac"] }
ratatui = "0.30"
rustfft = "6.4"
hound = "3.5"
signal-hook = "0.4"
log = "0.4"
fern = "0.7"

# L-6: Release profile optimizations for real-time audio DSP.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.25.0"
